sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value lgr
    for (j <- i + 1 to lgr - 2) {
                       ^